P4PADEV-1777 code review
