# openapi/p4pa-pagopa-payments.openapi.yaml
@@ -147,11 +147,6 @@ paths:
           schema:
             type: integer
             format: int64
-        - name: fileName
-          in: query
-          required: true
-          schema:
-            type: string
         - name: flowId
           in: query
           required: true
